--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
 
     <footer>
         <p>&copy; 2025 Mudang Tiffin Service</p>
+        <p>
+            <a href="https://www.instagram.com/yourprofile" target="_blank">Instagram</a> |
+            <a href="https://www.facebook.com/yourprofile" target="_blank">Facebook</a> |
+            <a href="https://wa.me/yourphonenumber" target="_blank">WhatsApp</a>
+        </p>
     </footer>
 </body>
 </html>
