--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <p>&copy; 2025 Mudang Tiffin Service</p>
         <p>
             <a href="https://www.instagram.com/yourprofile" target="_blank">Instagram</a> |
-            <a href="https://www.facebook.com/yourprofile" target="_blank">Facebook</a> |
-            <a href="https://wa.me/yourphonenumber" target="_blank">WhatsApp</a>
+            <a href="https://www.facebook.com/profile.php?id=61575342135253" target="_blank">Facebook</a> |
+            <a href="https://wa.me/8839685246" target="_blank">WhatsApp</a>
         </p>
     </footer>
 </body>
