--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p>
             <a href="https://www.instagram.com/yourprofile" target="_blank">Instagram</a> |
             <a href="https://www.facebook.com/profile.php?id=61575342135253" target="_blank">Facebook</a> |
-            <a href="https://wa.me/8839685246" target="_blank">WhatsApp</a>
+            <a href="https://wa.me/+918839685246" target="_blank">WhatsApp</a>
         </p>
     </footer>
 </body>
