--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <footer>
         <p>&copy; 2025 Mudang Tiffin Service</p>
         <p>
-            <a href="https://www.instagram.com/yourprofile" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
+            <a href="https://www.instagram.com/mudangtiffin" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
             <a href="https://www.facebook.com/profile.php?id=61575342135253" target="_blank" style="color: yellow; font-weight: bold;">Facebook</a> |
             <a href="https://wa.me/+917640987251" target="_blank" style="color: yellow; font-weight: bold;">WhatsApp</a>
         </p>
