--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
             <img src="images/7.jpg" alt="Dish 7">
             <img src="images/8.jpg" alt="Dish 8">
         </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5ZrKr5mW2I" title="YouTube video" frameborder="0" allowfullscreen></iframe>
+       <iframe style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
+                src="https://www.youtube.com/embed/Y5ZrKr5mW2I" 
+                title="YouTube video" frameborder="0" allowfullscreen>
+        </iframe>
     </section>
 
     <section id="contact">
