--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mudang Tiffin Service</title>
+    <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Mudang Tiffin Service</h1>
         <p>Your daily dose of freshly cooked meals!</p>
@@ -19,7 +21,8 @@
             </ul>
         </nav>
     </header>
-    
+
+    <!-- Home Section -->
     <section id="home">
         <h2>Welcome to Mudang Tiffin Service</h2>
         <p>We provide delicious and hygienic meals delivered to your doorstep. Perfect for college students and working professionals in Ziro, Lower Subansiri, Arunachal Pradesh.</p>
@@ -36,12 +39,14 @@
         <p><strong>Sunday Special:</strong> Supplied only in the afternoon.</p>
     </section>
 
+    <!-- Menu Section -->
     <section id="menu">
         <h2>Our Menu</h2>
         <img src="images/indian-dishes.jpg" alt="Indian Dishes">
         <p>Experience the taste of home-cooked Indian meals.</p>
     </section>
 
+    <!-- Gallery Section -->
     <section id="gallery">
         <h2>Gallery</h2>
         <p>Take a glimpse at our tiffin services and delicious meals.</p>
@@ -55,27 +60,30 @@
             <img src="images/7.jpg" alt="Dish 7">
             <img src="images/8.jpg" alt="Dish 8">
         </div>
-       <iframe style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
-                src="https://www.youtube.com/embed/Y5ZrKr5mW2I" 
-                title="YouTube video" frameborder="0" allowfullscreen>
+        <iframe 
+            style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
+            src="https://www.youtube.com/embed/Y5ZrKr5mW2I" 
+            title="YouTube video" frameborder="0" allowfullscreen>
         </iframe>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
         <p><strong>Mrs. Mudang Akka</strong>, Owner</p>
         <p>Tel: 7640987251</p>
         <form action="save_message.php" method="post">
-    <label for="name">Name:</label><br>
-    <input type="text" id="name" name="name" required><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <label for="message">Message:</label><br>
-    <textarea id="message" name="message" rows="4" required></textarea><br>
-    <button type="submit">Submit</button>
-</form>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br>
+            <button type="submit" style="padding: 10px 20px; background-color: #333; color: #fff; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
+        </form>
     </section>
 
+    <!-- Footer Section -->
     <footer>
         <p>&copy; 2025 Mudang Tiffin Service</p>
         <p>
