--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <!-- Admin Login Button -->
     <div class="admin-login">
-        <a href="admin.html">Admin Login</a>
+        <a href="admin_login.php">Admin Login</a>
     </div>
 
     <!-- Footer Section -->
@@ -157,6 +157,7 @@
             setTimeout(() => {
                 flashMessage.style.display = 'none'; // Hide after 5 seconds
             }, 5000);
+            document.getElementById('contact-form').submit(); // Continue form submission to the backend
         }
     </script>
 </body>
