--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             color: #fff;
             text-decoration: none;
             border-radius: 5px;
+            font-size: 16px;
         }
     </style>
 </head>
