--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             cursor: pointer;
         }
 
+        #contact {
+            margin-bottom: 50px; /* Ensure space between the Contact section and footer */
+        }
+
         nav {
             display: flex;
             justify-content: center;
@@ -64,6 +68,18 @@
 
         .admin-login a:hover {
             background-color: #555;
+        }
+
+        footer {
+            padding: 20px 0;
+            text-align: center;
+            background-color: #000;
+            color: #fff;
+            position: relative; /* Removes overlap issues */
+        }
+
+        body {
+            padding-bottom: 80px; /* Adds space to avoid overlap with footer */
         }
     </style>
 </head>
