--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section id="contact">
         <h2>Contact Us</h2>
         <p><strong>Mrs. Mudang Akka</strong>, Owner</p>
-        <p>Tel: 7640987251</p>
+        <p>Tel: +919366414570</p>
         <form id="contact-form" action="https://formspree.io/f/manoqoee" method="post">
             <input type="hidden" name="_redirect" value="https://mrill01.github.io/MudangTiffin/thank-you.html">
             <label for="name">Name:</label>
@@ -145,7 +145,7 @@
         <p>
             <a href="https://www.instagram.com/mudangtiffin" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
             <a href="https://www.facebook.com/profile.php?id=61575342135253" target="_blank" style="color: yellow; font-weight: bold;">Facebook</a> |
-            <a href="https://wa.me/+917640987251" target="_blank" style="color: yellow; font-weight: bold;">WhatsApp</a>
+            <a href="https://wa.me/+919366414570" target="_blank" style="color: yellow; font-weight: bold;">WhatsApp</a>
         </p>
     </footer>
 </body>
