Modify footer social media links
Updated social media links in the footer section.

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <footer>
         <p>&copy; 2025 Mudang Tiffin Service</p>
         <p>
-            <a href="https://www.instagram.com/mudangtiffin" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
-            <a href="https://www.facebook.com/profile.php?id=61575342135253" target="_blank" style="color: yellow; font-weight: bold;">Facebook</a> |
-            <a href="https://wa.me/+919366414570" target="_blank" style="color: yellow; font-weight: bold;">WhatsApp</a>
+            <a href="https://www.instagram.com/______________" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
+            <a href="https://www.facebook.com/profile.php?id=_____________" target="_blank" style="color: yellow; font-weight: bold;">Facebook</a> |
+            <a href="https://wa.me/+91_________________" target="_blank" style="color: yellow; font-weight: bold;">WhatsApp</a>
         </p>
     </footer>
 </body>
