--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <iframe 
             style="width: 100%; max-width: 560px; height: auto; aspect-ratio: 16/9;" 
-            src="https://www.youtube.com/embed/Y5ZrKr5mW2I" 
+            src="https://www.youtube.com/embed/YZgmxwD46g4" 
             title="YouTube video" frameborder="0" allowfullscreen>
         </iframe>
     </section>
@@ -125,8 +125,8 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
-        <p><strong>Mrs. Mudang Akka</strong>, Owner</p>
-        <p>Tel: +919366414570</p>
+        <p><strong>Mrs. Mudang Tarzan</strong>, Owner</p>
+        <p>Tel: +911234567890</p>
         <form id="contact-form" action="https://formspree.io/f/manoqoee" method="post">
             <input type="hidden" name="_redirect" value="https://mrill01.github.io/MudangTiffin/thank-you.html">
             <label for="name">Name:</label>
