Rename service from Mudang to Maggie

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mudang Tiffin Service</title>
+    <title>Maggy Tiffin Service</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Ensure form is proportional to the overall page */
@@ -67,7 +67,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Mudang Tiffin Service</h1>
+        <h1>Maggie Tiffin Service</h1>
         <p>Your daily dose of freshly cooked meals!</p>
         <nav>
             <a href="#home">Home</a>
@@ -79,8 +79,8 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h2>Welcome to Mudang Tiffin Service</h2>
-        <p>We provide delicious and hygienic meals delivered to your doorstep. Perfect for college students and working professionals in Ziro, Lower Subansiri, Arunachal Pradesh.</p>
+        <h2>Welcome to Maggie Tiffin Service</h2>
+        <p>We provide delicious and hygienic meals delivered to your doorstep. Perfect for college students and working professionals in Pacific Ocean.</p>
         <p>Our tiffin includes:</p>
         <ul>
             <li>2 Seasonal Vegetables</li>
@@ -141,7 +141,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 Mudang Tiffin Service</p>
+        <p>&copy; 2055 Maggie Tiffin Service</p>
         <p>
             <a href="https://www.instagram.com/______________" target="_blank" style="color: yellow; font-weight: bold;">Instagram</a> |
             <a href="https://www.facebook.com/profile.php?id=_____________" target="_blank" style="color: yellow; font-weight: bold;">Facebook</a> |
