--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         <p>We provide delicious and hygienic meals delivered to your doorstep. Perfect for college students and working professionals in Pacific Ocean.</p>
         <p>Our tiffin includes:</p>
         <ul>
-            <li>2 Seasonal Vegetables</li>
-            <li>1 Dal</li>
-            <li>4 Rotis</li>
-            <li>1 Rice</li>
-            <li>Pickle</li>
-            <li>Salad</li>
-            <li>Papad</li>
+            <li>2 Maggie Strands</li>
+            <li>1 Maggie Strand</li>
+            <li>4 Maggie Strands</li>
+            <li>1 Maggie Strand</li>
+            <li>Water</li>
+            <li>Salt</li>
+            <li>Pani</li>
         </ul>
         <p><strong>Sunday Special:</strong> Supplied only in the afternoon.</p>
     </section>
@@ -98,7 +98,7 @@
     <section id="menu">
         <h2>Our Menu</h2>
         <img src="images/indian-dishes.jpg" alt="Indian Dishes">
-        <p>Experience the taste of home-cooked Indian meals.</p>
+        <p>Experience the taste of home-cooked Maggie.</p>
     </section>
 
     <!-- Gallery Section -->
@@ -125,7 +125,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Us</h2>
-        <p><strong>Mrs. Mudang Tarzan</strong>, Owner</p>
+        <p><strong>Mrs. Maggie Tarzan</strong>, Owner</p>
         <p>Tel: +911234567890</p>
         <form id="contact-form" action="https://formspree.io/f/manoqoee" method="post">
             <input type="hidden" name="_redirect" value="https://mrill01.github.io/MudangTiffin/thank-you.html">
