--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maggy Tiffin Service</title>
+    <title>Maggie Tiffin Service</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Ensure form is proportional to the overall page */
@@ -68,7 +68,7 @@
     <!-- Header Section -->
     <header>
         <h1>Maggie Tiffin Service</h1>
-        <p>Your daily dose of freshly cooked meals!</p>
+        <p>Your daily dose of freshly cooked maggie!</p>
         <nav>
             <a href="#home">Home</a>
             <a href="#menu">Our Menu</a>
@@ -80,7 +80,7 @@
     <!-- Home Section -->
     <section id="home">
         <h2>Welcome to Maggie Tiffin Service</h2>
-        <p>We provide delicious and hygienic meals delivered to your doorstep. Perfect for college students and working professionals in Pacific Ocean.</p>
+        <p>We provide delicious and hygienic maggie at our doorstep. You just have to bring a packet of Maggie and we cook it for you. Perfect for college students and working professionals in Pacific Ocean.</p>
         <p>Our tiffin includes:</p>
         <ul>
             <li>2 Maggie Strands</li>
@@ -91,7 +91,7 @@
             <li>Salt</li>
             <li>Pani</li>
         </ul>
-        <p><strong>Sunday Special:</strong> Supplied only in the afternoon.</p>
+        <p><strong>Sunday Special:</strong> Milky Maggie with Sugar and crushed biscuits and tomato sauce and curd - Supplied only in the afternoon.</p>
     </section>
 
     <!-- Menu Section -->
