--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Menu Section -->
     <section id="menu">
         <h2>Our Menu</h2>
-        <img src="images/indian-dishes.jpg" alt="Indian Dishes">
+        <img src="images/Indian-dishes.jpg" alt="Indian Dishes">
         <p>Experience the taste of home-cooked Maggie.</p>
     </section>
 
